--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-empty-project-2/.gradle/
-empty-project-2/.idea/
+empty-project-2/.gradle/.
+empty-project-2/.idea/.
 empty-project-2/classes/
 empty-project-2/build/
 empty-project-2/derby.log
