--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -1,11 +1,11 @@
-group 'edu.wpi.cs3733d18.teamX' // replace with your package name
+group 'application' // replace with your package name
 version '0.1'
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-mainClassName = "Main" // replace with your main class
+mainClassName = "application.Main" // replace with your application class
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -15,7 +15,7 @@ repositories {
     mavenCentral()
 }
 
-// You'll need to create an integration-test folder with the same structure as your test or main folders
+// You'll need to create an integration-test folder with the same structure as your test or application folders
 sourceSets {
     integrationTest {
         java {
