--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -45,7 +45,8 @@ dependencies {
             [group: 'com.jfoenix', name: 'jfoenix', version: '8.0.3'],
             [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
-            [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1']
+            [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
+            [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14']
     )
     compile(
             [group: 'junit', name: 'junit', version: '4.12'],
@@ -53,6 +54,7 @@ dependencies {
             [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
+            [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
     )
 }
 
