--- a/Project/gradle/wrapper/gradle-wrapper.properties
+++ b/Project/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Tue Apr 09 23:09:09 EDT 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
