--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -16,6 +16,13 @@ repositories {
     jcenter {
         url 'https://jcenter.bintray.com/'
     }
+//    ivy {
+//        url 'http://jfxtras.org/'
+//        layout 'pattern' , {
+//            ivy '[module]/[revision]/[type]/[artifact].[ext]'
+//            artif
+//        }
+//    }
 }
 
 // You'll need to create an integration-test folder with the same structure as your test or application folders
@@ -64,8 +71,9 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
-            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0']
+            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
     )
+    compile 'com.calendarfx:view:8.5.0'
 }
 
 check.dependsOn integrationTest
