--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -55,7 +55,8 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
-            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0']
+            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
+            [group: 'com.textmagic.sdk', name: 'textmagic-java-sdk', version: '1.2.0']
     )
     compile(
             [group: 'junit', name: 'junit', version: '4.12'],
@@ -64,7 +65,9 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
-            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0']
+            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
+            [group: 'com.textmagic.sdk', name: 'textmagic-java-sdk', version: '1.2.0']
+
     )
 }
 
