--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -56,7 +56,7 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
             [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
-            [group: 'com.textmagic.sdk', name: 'textmagic-java-sdk', version: '1.2.0']
+            [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2']
     )
     compile(
             [group: 'junit', name: 'junit', version: '4.12'],
@@ -66,7 +66,7 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
             [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
-            [group: 'com.textmagic.sdk', name: 'textmagic-java-sdk', version: '1.2.0']
+            [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2']
 
     )
 }
