--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -13,10 +13,15 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+repositories {
+    mavenCentral()
     jcenter {
         url 'https://jcenter.bintray.com/'
     }
 }
+
 
 // You'll need to create an integration-test folder with the same structure as your test or application folders
 sourceSets {
@@ -55,7 +60,9 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
-            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0']
+            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
+            [group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'],
+            [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2']
     )
     compile(
             [group: 'junit', name: 'junit', version: '4.12'],
@@ -64,11 +71,17 @@ dependencies {
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
-            [group: 'com.calendarfx', name: 'calendarfx', version: '8.4.2'],
-            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0']
+            [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
+            [group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'],
+            [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2'],
+            [group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2'],
+            [group: 'com.calendarfx', name:'view', version: '8.4.2']
     )
-    compile 'com.calendarfx:calendar:11.5.0'
+    runtime(
+            [group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2']
+    )
 }
+
 
 check.dependsOn integrationTest
 integrationTest.mustRunAfter test
