--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -70,15 +70,16 @@ dependencies {
             [group: 'org.apache.derby', name: 'derby', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbyclient', version: '10.11.1.1'],
             [group: 'org.apache.derby', name: 'derbytools', version: '10.11.1.1'],
-            [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
+            [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.13'],
             [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
             [group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'],
             [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2'],
-            [group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2'],
-            [group: 'com.calendarfx', name:'view', version: '8.4.2']
+            [group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-1'],
+            [group: 'com.calendarfx', name:'view', version: '8.4.2'],
+            [group: 'com.calendarfx', name: 'recurrence', version: '8.4.2']
     )
     runtime(
-            [group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2']
+            [group: 'de.jensd', name: 'fontawesomefx-commons', version: '8.13']
 
     )
 }
