--- a/Project/build.gradle
+++ b/Project/build.gradle
@@ -62,7 +62,8 @@ dependencies {
             [group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'],
             [group: 'net.kurobako', name: 'gesturefx', version: '0.3.0'],
             [group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'],
-            [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2']
+            [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1']
     )
     compile(
             [group: 'junit', name: 'junit', version: '4.12'],
@@ -76,7 +77,8 @@ dependencies {
             [group: 'com.twilio.sdk', name: 'twilio', version: '7.37.2'],
             [group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-1'],
             [group: 'com.calendarfx', name:'view', version: '8.4.2'],
-            [group: 'com.calendarfx', name: 'recurrence', version: '8.4.2']
+            [group: 'com.calendarfx', name: 'recurrence', version: '8.4.2'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1']
     )
     runtime(
             [group: 'de.jensd', name: 'fontawesomefx-commons', version: '8.13']
